# air-pdf

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
brand/: airpdf-updater.key.pub
docs/: known-issues-v0.4.md
docs/decisions/: 0001-text-editing-limitations.md  0002-firma-digital-camino-reniec.md  firma-digital-reniec-tramite.md
docs/legal/: NOTICE  THIRD_PARTY_LICENSES.md
docs/superpowers/plans/: 2026-04-18-air-pdf-phase1-overview.md  2026-04-18-air-pdf-plan-1.1-foundation.md  2026-04-18-air-pdf-plan-1.2-annotations.md  2026-04-18-air-pdf-plan-1.3-editing-release.md  2026-04-26-air-pdf-plan-2.0-evaluacion-componentes-oss.md
docs/superpowers/specs/: 2026-04-18-air-pdf-design.md  2026-04-26-embedpdf-poc-protocolo.md  2026-04-26-firma-pkcs7-decision.md  2026-04-26-live-preview-watermark-pagenums.md  2026-04-26-stirling-features-mapping.md
docs/user-guide/: getting-started.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  annotations.rs  auto_redact.rs  blank_pages.rs  content_edit.rs  mod.rs  pages.rs  pdf.rs  sanitize.rs  search.rs  security.rs  settings.rs  transform.rs
src-tauri/src/integrations/: ai.rs  claude_api.rs  claude_code.rs  mod.rs  ollama.rs
src-tauri/src/pdf/: auto_redact.rs  blank_pages.rs  document.rs  editor.rs  engine.rs  extractor.rs  mod.rs  renderer.rs  sanitize.rs  security.rs  transform.rs
src-tauri/src/storage/: autosave.rs  mod.rs  recent.rs  settings.rs  sidecar.rs  version_history.rs
src/components/annotations/: AnnotationLayer.tsx  FreeTextEditor.tsx  ResizableBox.tsx  StampPicker.tsx
src/components/dialogs/: AboutDialog.tsx  AddTextDialog.tsx  AiDialog.tsx  AutoRedactDialog.tsx  BlankPagesDialog.tsx  BookmarksDialog.tsx  ComparePdfDialog.tsx  CompressDialog.tsx  CropDialog.tsx  ExportImagesDialog.tsx  FontInspectorDialog.tsx  FormFieldsDialog.tsx  GotoDialog.tsx  ImagesToPdfDialog.tsx  MergePdfsDialog.tsx  MetadataDialog.tsx  OcrDialog.tsx  PageNumbersDialog.tsx  PasswordDialog.tsx  PrintDialog.tsx  RecentFilesMenu.tsx  SanitizeDialog.tsx  SearchDialog.tsx  ShortcutsDialog.tsx  SplitExtractDialog.tsx  StampImageDialog.tsx  VersionsDialog.tsx  (+2 more)
src/hooks/: useAutoSave.ts  useDragDrop.ts  usePageInteraction.ts  usePdfDocument.ts  useShortcuts.ts  useUpdateCheck.ts
src/lib/: annotations-export.ts  openPdfFlow.ts  tauri.ts
src/stores/: annotationStore.ts  modeStore.ts  pdfStore.ts  settingsStore.ts  uiStore.ts
src/types/: annotations.ts  pdf.ts  settings.ts
tests/e2e/: smoke.spec.ts
tests/unit/: PageOverlay.test.tsx  example.test.ts  openPdfFlow.test.ts  pdfStore.test.ts
(+18 files in other folders)
