[package]
name = "air-pdf"
version = "0.1.0"
description = "Editor de PDFs standalone con IA opcional"
authors = ["Alfredo Pachas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "air_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
pdfium-render = { version = "0.9", features = ["thread_safe", "image_025"] }
image = "0.25"
toml = "0.8"

