[package]
name = "air-pdf"
version = "0.3.2"
description = "Editor de PDFs standalone con IA opcional"
authors = ["Alfredo Pachas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "air_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
pdfium-render = { version = "0.9", features = ["thread_safe", "image_025"] }
image = "0.25"
toml = "0.8"
sha2 = "0.10"
lopdf = "0.34"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# Spike v0.4 - password protection y operaciones lossless (Plan 2.0.A)
# Feature `vendored` compila libqpdf desde fuente para no requerir el .dll
# instalado en el sistema. Primer build sera lento (libqpdf + bindgen).
qpdf = { version = "0.3", features = ["vendored"] }

# Auto-redact regex (Stirling mapping #2). regex ya entra como transitiva
# por bindgen; declararla explicita es para usarla directamente.
regex = "1"

